<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/pagamentos_nestMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="70dp"
            android:orientation="vertical">

            <android.support.v4.view.ViewPager
                android:id="@+id/vp_cartoes"
                android:layout_width="match_parent"
                android:layout_height="220dp" />

            <RadioGroup
                android:id="@+id/pagamentos_radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="@dimen/layout_padding"
                android:paddingEnd="@dimen/layout_padding">

                <android.support.design.widget.TextInputLayout
                    style="@style/DesignInputLayout">

                    <EditText
                        android:id="@+id/pagamentos_edtNumCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/n_mero_do_cart_o"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="5dp">

                    <android.support.design.widget.TextInputLayout
                        style="@style/DesignInputLayout"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/pagamentos_edtMaturity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/vencimento"
                            android:inputType="number" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        style="@style/DesignInputLayout"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/pagamentos_edtCod"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/cod_seguran_a"
                            android:inputType="number" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <android.support.design.widget.TextInputLayout style="@style/DesignInputLayout">

                    <EditText
                        android:id="@+id/pagamentos_edtName"
                        android:hint="@string/nome_impresso"
                        style="@style/DesignEdtText"
                        android:inputType="" />

                </android.support.design.widget.TextInputLayout>
                <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="0dp"-->
                <!--android:layout_weight="1"-->
                <!--android:gravity="bottom"-->
                <!--android:orientation="vertical">-->

                <!--</LinearLayout>-->


            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/pagamentos_btnAdd"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/layout_padding"
        android:layout_marginEnd="@dimen/layout_padding"
        android:backgroundTint="?colorPrimary"
        android:text="@string/adicionar_m_todo_de_pagamento" />

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/addCard_cooLay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:alpha="0"
        android:background="@color/black_transparent"
        android:elevation="7dp"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/addCard_lnlMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/bs_add_card" />

        </LinearLayout>


    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>

